--- a/style.css
+++ b/style.css
@@ -1,15 +1,22 @@
+div div a {
+  font-family: Eurostile;
+  font-weight: bold;
+  font-size: 26pt;
+}
+
 #clock {
     align-items:  center;
     vertical-align: middle;
     font-weight: bold;
     color: #2aa198;
+    text-shadow: 0px 0px 10px #2aa198
     font-size: 80px;
     text-shadow: 5px 5px 5px #00000000;
 }
 
 #box1 {
     background-color: #073642;
-    color: #839496;
+    color: #b58900;
     margin: 10px;
     padding-top: 15px;
     padding-bottom: 15px;
@@ -23,7 +30,7 @@
 
 #box2 {
     background-color: #073642;
-    color: #839496;
+    color: #268bd2;
     margin: 10px;
     padding-top: 15px;
     padding-bottom: 15px;
@@ -37,7 +44,7 @@
 
 #box3 {
     background-color: #073642;
-    color: #839596;
+    color: #cb4b16;
     margin: 10px;
     padding-top: 15px;
     padding-bottom: 15px;
@@ -118,7 +125,9 @@ a {
     border: 5px solid #268bd200;
     background-color: #073642;
     color: #859900;
+    text-shadow: 0px 0px 10px #859900;
     font-family: inherit;
+    font-weight: bold;
     font-size: 18px;
     margin: 10px;
     border-radius: 5px;
