--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ div div a {
     vertical-align: middle;
     font-weight: bold;
     color: #2aa198;
-    text-shadow: 0px 0px 10px #2aa198
+    text-shadow: 0px 0px 10px #2aa198;
     font-size: 80px;
     text-shadow: 5px 5px 5px #00000000;
 }
