--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     font-weight: bold;
     color: #859900;
     font-size: 80px;
-    text-shadow: 0px 0px 8px #2aa198;
+    text-shadow: 0px 0px 8px #859900;
 }
 
 #box1 {
