--- a/style.css
+++ b/style.css
@@ -80,7 +80,7 @@ a {
 #box1:hover {
     transform: scale(1.0);
     color: #859900;
-    box-shadow: 0px 0px 5px 5px #859900;
+    box-shadow: 0px 0px 5px 5px #85990088;
     transition: 0.2s;
       font-family: Eurostile;
     font-weight: bold;
@@ -89,7 +89,7 @@ a {
 #box2:hover {
     transform: scale(1.0);
     color: #859900;
-    box-shadow: 0px 0px 5px 5px #859900;
+    box-shadow: 0px 0px 5px 5px #85990088;
     transition: 0.2s;
     font-family: Eurostile;
     font-weight: bold;
@@ -98,7 +98,7 @@ a {
 #box3:hover {
     transform: scale(1.0);
     color: #859900;
-    box-shadow: 0px 0px 5px 5px #859900;
+    box-shadow: 0px 0px 5px 5px #85990088;
     text-shadow: #859900;
     transition: 0.2s;
     font-family: Eurostile;
@@ -117,8 +117,6 @@ a {
 #searchbar:focus {
     width: 100%;
     max-width: 925px;
-    border: 5px solid #586e7500;
-    border-radius: 5px;
     box-shadow: 0px 0px 3px 3px #859900;
     color: #859900;
     text-shadow: 0px 0px 5px #859900;
