--- a/style.css
+++ b/style.css
@@ -117,8 +117,8 @@ a {
 #searchbar:focus {
     width: 100%;
     max-width: 925px;
-    box-shadow: 0px 0px 3px 3px #859900;
-    border: 5px solid #85990000;
+    box-shadow: 0px 0px 5px 5px #859900;
+    border: 5px solid #859900;
     color: #859900;
     text-shadow: 0px 0px 5px #859900;
     background-color: #002n36;
